finished the design of the side menu, fixed hero and header z-index issue

--- a/styles.css
+++ b/styles.css
@@ -84,10 +84,12 @@ img {
   color: #aaa;
 }
 
+/* ensure the header is always on top */
 header {
+  position: fixed;
   width: 100%;
   padding: 20px;
-  z-index: 10;
+  z-index: 1000;
   top: 0;
   left: 0;
   position: absolute;
@@ -180,6 +182,21 @@ header .columns nav a.active {
   display: none;
 }
 
+@media (min-width: 1201px) {
+  .hamburger-menu,
+  .side-menu,
+  .overlay {
+    display: none;
+  }
+
+  header .columns nav {
+    z-index: 1003;
+  }
+  .book-btn {
+    z-index: 1003;
+  }
+}
+
 @media (max-width: 1200px) {
   .hamburger-menu {
     display: block;
@@ -204,10 +221,10 @@ header .columns nav a.active {
     position: fixed;
     top: 0;
     left: 0;
-    /* left: -360px; */
+    left: -360px;
     width: 360px;
     background-color: #0e0d0b;
-    z-index: 9001;
+    z-index: 1002;
     transition: 0.4s;
     padding: 50px 40px;
     box-sizing: border-box;
@@ -221,33 +238,47 @@ header .columns nav a.active {
   }
 
   .side-menu.active {
-    right: 0;
+    left: 360px;
   }
 
   .close-btn {
     position: absolute;
     top: 40px;
     right: 40px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 1px solid #fff;
+    border-radius: 50%;
   }
 
   .close-btn .bar {
-    width: 20px;
-    height: 3px;
+    position: absolute;
+    width: 60%;
+    height: 2px;
     background-color: #fff;
     transition: 0.4s;
   }
 
   .close-btn .bar:nth-child(1) {
-    transform: translate(0, 11px) rotate(-45deg);
+    transform: rotate(-45deg);
   }
 
   .close-btn .bar:nth-child(2) {
-    transform: translate(0, -11px) rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  .side-menu .logo {
+    padding-top: 40px;
+    align-items: left;
+    text-align: left;
+  }
+
+  .side-menu .logo .logo-div {
+    text-align: left;
   }
 
   .side-menu nav {
@@ -255,19 +286,30 @@ header .columns nav a.active {
     flex-direction: column;
     align-items: left;
     text-align: left;
+    margin-top: 40px;
   }
 
   .side-menu nav a {
     color: #fff;
     text-decoration: none;
-    font-size: 20px;
-    margin: 10px 0;
+    font-size: 18px;
+    font-family: 'DM Sans', sans-serif;
+    transition: 0.4s;
+    cursor: pointer;
+    position: relative;
+    z-index: 1003;
+  }
+
+  .side-menu nav a:hover {
+    color: #e4c590;
+    transform: translateX(5px);
   }
 
   nav .separator {
     width: 80%;
     height: 1px;
-    color: #353535;
+    border-top: #383838;
+    border-bottom: 1px solid #1b1b1b;
   }
   .contact-info {
     margin-top: 50px;
@@ -279,11 +321,43 @@ header .columns nav a.active {
   }
 
   .contact-info h2 {
-    font-size: 2rem;
+    font-size: 1.6rem;
     font-weight: 500;
   }
 
   .contact-info h3 {
+    font-size: 1.6rem;
+  }
+
+  .contact-info p {
+    font-size: 20px;
+    font-family: 'Cormorant', serif;
+    padding-bottom: 30px;
+    color: #cfcfcf;
+  }
+
+  .contact-info .contact-number {
+    font-size: 20px;
+    font-family: 'DM Sans', sans-serif;
+    color: #e4c590;
+  }
+
+  /* Webkit-based browsers */
+  .side-menu::-webkit-scrollbar {
+    width: 10px; /* Width of the scrollbar */
+    scroll-behavior: smooth;
+  }
+
+  .side-menu::-webkit-scrollbar-track {
+    background: #0e0d0b; /* Background of the scrollbar track */
+    scroll-behavior: smooth;
+  }
+
+  .side-menu::-webkit-scrollbar-thumb {
+    background-color: #292723; /* Color of the scrollbar thumb */
+    border-radius: 12px; /* Roundness of the scrollbar thumb */
+    border: 1px solid #222424; /* Padding around the thumb */
+    scroll-behavior: smooth;
   }
 
   .overlay {
@@ -293,12 +367,15 @@ header .columns nav a.active {
     width: 100%;
     height: 100%;
     background-color: rgb(0, 0, 0, 0.7);
-    z-index: 999;
-    display: none;
+    opacity: 0;
+    z-index: 1001;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
   }
 
   .overlay.active {
-    display: block;
+    opacity: 1;
+    visibility: visible;
   }
 }
 
@@ -370,12 +447,12 @@ header .columns nav a.active {
   gap: 20px;
   height: 650px;
   width: 100%;
-
+  position: relative;
   max-height: 100%;
   align-items: center;
   text-align: center;
   position: relative;
-  z-index: 250;
+  z-index: 10;
   padding-top: 200px;
   transition: all 0.3s ease;
 }
